--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.39.0",
+    "@google/generative-ai": "^0.24.0",
     "@radix-ui/react-dropdown-menu": "^2.1.11",
     "@radix-ui/react-slot": "^1.2.0",
+    "@stripe/stripe-js": "^7.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
+    "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
+    "openai": "^4.95.1",
+    "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "stripe": "^18.0.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
